--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@line/liff": "^2.27.2",
     "@prisma/client": "^6.15.0",
     "firebase": "^12.1.0",
     "next": "15.4.6",
@@ -24,5 +25,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "tailwindcss": "^4"
+  },
+  "engines": {
+    "node": ">=18.17"
   }
 }
