--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "debug": "node --inspect=9229 node_modules/next/dist/bin/next dev -p 3000"
   },
   "dependencies": {
     "@line/liff": "^2.27.2",
@@ -24,7 +25,8 @@
     "@types/react": "19.1.12",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "5.9.2"
   },
   "engines": {
     "node": ">=18.17"
